Fixed an issue with cross-browser text-wrapping behaviour.

--- a/epiceditor/themes/editor/epic-dark.css
+++ b/epiceditor/themes/editor/epic-dark.css
@@ -8,8 +8,13 @@ body {
   padding:10px;
   color:#ddd;
   line-height:1.35em;
-  white-space: pre;
   overflow: visible;
   margin:0;
   padding:0;
+
+  white-space: -moz-pre-wrap;
+  white-space: -o-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
